fixed spacing issues with main card

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: space-between;
   border-radius: 16px;
+  max-width: 640px;
 }
 
 .ProfilePic {
